--------------------------------------------------------------------------
---------                  Ampache -- CHANGELOG                  ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.3.3-Beta2 12/18/2006: 
	- Fixed a bug that prevented adding new songs to the catalog


--------------------------------------------------------------------------
  v.3.3.3-Beta1 12/18/2006 
  	- Moved Comment information to seperate table and added lyrics
		row, no support for lyrics yet though.
  	- Removed Upload functionality (broken, and time better spent on
		other features)
  	- Added Recommendations based on Ratings to Stats page
  	- Encoded the LastFM password so that it isn't displayed or
		stored in plain text. 
  	- Fixed an issue with Admin -> Streaming -> Localplay Level
		not correctly displaying the current setting
  	- Integrated LastFM plugin per user requests. 
	- Added /bin/delete_disabled.php.inc to delete any disabled
		songs in your DB, defaults to Debug only mode
	- Fixed display issue with players that ignore EXTINF in m3us
		(Thx AlxRogan)
	- Added Refreshing to the Recently Played menu at the same time
		it refresh the now playing on the index page
	- Fixed a cataloging issue that was using a round about way of
		checking to make sure the song wasn't flaged. 
	- A ton of CSS cleanup (Thx apex)
	- Fixed an issue with multi-value config options on test.php
	- Changed default site_charset to UTF-8 in ampache.cfg.php.dist
	- Fixed some <? in show_test.inc (Thx apex)
	- Added Plugin Interface under Admin --> Modules
	- Fixed playtype switcher so it shows all possible play methods
	- Tweaked home page a little, remove pop songs and recent artists
	- Added Recently Played to Main Page
	- Fixed an issue on Browse by Albums and sorting by Artist after
		sorting by something else 
	- Added initial Tag writting script (Thx Jirwin)